# metamorph

./: .gitignore  CMakeLists.txt  README.md  README.rst  setup.py
csound/: CMakeLists.txt  example.csd  metamorph_opcode.cpp  metamorph_opcode.h
examples/: CMakeLists.txt  harmonic_distortion.py  noise_rt.csd  noisiness_transience.py  spec_env.py  spec_env_interp.cpp  spec_env_plot.py  time_scale.py  transient_filter.py  transposition.csd  transposition.py  transposition_rt.csd  transposition_with_env.py
metamorph/: __init__.py  fx.pxd  fx.pyx
src/: exceptions.cpp  exceptions.h  fx.cpp  fx.h  metamorph.h  spec_env.cpp  spec_env.h  time_scale.cpp  time_scale.h  transformations.cpp  transformations.h
tests/: test_common.h  test_fx.cpp  test_fx.h  test_fx.py  tests.cpp
